fix: navbar z-index
Fixed bug where focused dodd obscured navbar

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -3,6 +3,7 @@
   background-color: #f08080;
   display: flex;
   justify-content: space-between;
+  z-index: 10;
 }
 
 .navbar .links {
